--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "@types/node": "20.12.8",
+    "@types/react": "18.3.1",
     "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
